manifests/deployment.yml
apiVersion: apps/v1
kind: Namespace
metadata:
  name: traefik-whoami
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: traefik-whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
