manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: traefik-whoami
spec:
  ports:
  - port: 80
  selector:
    app: whoami
